# lsystem-renderer-q4m7

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  lsystem.py  pyproject.toml  test_lsystem.py
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md
examples/: animation.py  basic_usage.py  custom_definitions.py  gallery_rendering.py  new_presets.py  pdf_and_optimized.py  svg_optimization.py
lsystem_renderer/: __init__.py  cli.py
lsystem_renderer/core/: __init__.py  color_postprocessor.py  config.py  engine.py  interpreter.py  presets.py  renderer.py  types.py
lsystem_renderer/renderers/: __init__.py  ascii.py  grid.py  pdf.py  png.py  svg.py
lsystem_renderer/utils/: colors.py  svg_optimizer.py
tests/: test_lsystem.py  test_v3_features.py
