[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsystem-renderer-q4m7"
version = "2.0.0"
description = "A formal grammar-based generative art engine implementing Lindenmayer Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "lsystem-renderer contributors"},
]
keywords = ["l-system", "fractal", "generative-art", "turtle-graphics", "svg", "plant-modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Life",
]

[project.optional-dependencies]
png = ["Pillow>=9.0"]
yaml = ["PyYAML>=6.0"]
toml = ["tomli>=2.0; python_version < '3.11'"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "Pillow>=9.0",
    "PyYAML>=6.0",
]
all = [
    "Pillow>=9.0",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
lsystem-renderer = "lsystem_renderer.cli:main"

[project.urls]
Homepage = "https://github.com/jayis1/lsystem-renderer-q4m7"
Repository = "https://github.com/jayis1/lsystem-renderer-q4m7"
Issues = "https://github.com/jayis1/lsystem-renderer-q4m7/issues"

[tool.setuptools.packages.find]
include = ["lsystem_renderer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"
]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["lsystem_renderer"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80